--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4773,7 +4773,7 @@ strong~p {
 ==========================**/
 
 .card {
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 	border: none;
 	-webkit-transition: all 0.3s ease;
 	transition: all 0.3s ease;
@@ -4792,7 +4792,7 @@ strong~p {
 
 .card .card-header {
 	background-color: #fff;
-	padding: 40px;
+	padding: 25px;
 	border-bottom: 1px solid #ecf3fa;
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
@@ -4869,7 +4869,7 @@ strong~p {
 }
 
 .card .card-body {
-	padding: 40px;
+	padding: 25px;
 	background-color: transparent;
 }
 
@@ -6884,7 +6884,7 @@ div.DTS div.dataTables_scrollBody table {
 	margin-right: 5px;
 }
 
-.dataTables_wrapper button {
+.dataTables_wrapper button, .dataTables_wrapper .btn {
 	font-weight: 400;
 	padding: 0.375rem 0.75rem;
 	font-size: 1rem;
@@ -39942,4 +39942,13 @@ svg.feather.feather-food path, svg.feather.feather-shop-owner path, svg.feather.
 .page-wrapper.compact-wrapper .page-body-wrapper.sidebar-icon div.sidebar-wrapper .sidebar-main .sidebar-links>li.sidebar-list:hover>a:hover svg.feather.feather-taxi-driver path {
     fill: var(--theme-deafult);
 }
+
+.ldr-btn { display: flex; align-items: center; justify-content: center; }
+.ldr-btn .loader-box { height: auto; margin-left: 10px; }
+.ldr-btn .loader-box .loader-3 { border-color: #fff; border-bottom-color: transparent; height: 20px; width: 20px; }
+
+
+.feather-food.font-primary path { fill: var(--theme-deafult) !important; }
+
+
 
